# db-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml
src/: builder.rs  db_class.rs  db_enum.rs  db_field.rs  db_manager.rs  lib.rs  main.rs  syntax_builder.rs
src/syntax/: impl_builder.rs  mod.rs  struct_builder.rs
