[package]
name = "db-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.185", features = ["derive"] }
surrealdb = "1.0.0-beta.10"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
quote = "1.0"
syn = { version = "2", default-features = false, features = ["full", "parsing"] }
prettyplease = "0.2"
proc-macro2 = "1"
sha256 = "1.4"
serde_json = "1.0.107"

